# tl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  benchmark.rs  cli.rs  container.rs  datetime.rs  error.rs  fast_formatter.rs  formatter.rs  interactive.rs  jumplist.rs  lib.rs  live_registry.rs  lnk_parser.rs  main.rs  mft.rs  ole.rs  output.rs  property_store.rs  registry.rs  registry_old.rs  shell_item.rs  simd_optimize.rs  types.rs  windows.rs
